--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 <ul>
 <li><code>Root</code> - Configure what the Admin and Team Platforms can view.</li>
 <li><code>Admin</code> - Create and Manage: Teams, Users, Projects, Templates, and Workflows</li>
-<li><code>Team</code> - Preform annotations and assign work.</li>
+<li><code>Team</code> - Perform annotations and assign work.</li>
 <li><code>API</code> - Protocols for interfacing via API.</li>
 </ul>
 <h2 id="module-overview">Module Overview</h2>
